--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,11 @@
-body {margin:0 auto;max-width:1200px;font-size:1rem;line-height:1.5;font-family: Arial, Helvetica, sans-serif;}
+body {margin:0 auto;padding:0px 20px;max-width:1200px;font-size:1rem;line-height:1.5;font-family: Arial, Helvetica, sans-serif;}
 a{color:#a30777}
 a:hover{text-decoration:none}
 
-header img{float:left;margin-right:20px;}
-header h1{margin-bottom:5px;color:#470661}
+header{overflow:hidden}
+header img{float:left;margin:20px 20px 0px 0px;}
+
+header h1{margin:8px 0px 5px;color:#470661}
 header span{font-style: italic; font-size:18px;}
 
 h2{margin-bottom:10px;color:#470661}
